# acquirium

./: .gitignore  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
deployments/: readme.md
deployments/WATERTAP/: readme.md
deployments/WATERTAP/models/: watertap-simple-pipe-model-with-ext-refs.ttl  watertap-simple-pipe-model.ttl
deployments/WATERTAP/scripts/: Dockerfile  insert_external_ref.py  pump_model.py  pump_model_simulation.py  stream_simulation.py
notebooks/: watertap-single-pump.ipynb
ontologies/: Brick.ttl  lexicon.json  qudt_qk.ttl  qudt_unit.ttl
scripts/: api_example.py  lexicon_builder.py  text_matcher_example.py
src/acquirium/: Dockerfile  __init__.py  mqtt_ingestion.py  soft_sensors.py
src/acquirium/Client/: acquirium.py  client.py  query.py
src/acquirium/Internals/: init-timescaledb.sql  internals_namespaces.py  models.py  mosquitto.conf  qudt_units.py
src/acquirium/Server/: app.py  manager.py
src/acquirium/Storage/: __init__.py  base.py  graph_store.py  timescale_store.py
src/acquirium/TextMatch/: decorators.py  service.py
tests/: Dockerfile  sample_data.csv  test_model copy.ttl  test_model.ttl  test_model_csv.ttl  test_model_stream.ttl  test_query_data.py  test_query_metadata.py
tests/src/: data_generator.py  graph_generator.py  requirements.txt  stream_simulation.py
